# relay

./: Dockerfile  SQLiteDB.py  app.py  docker_functions.py  ontop.py  pyproject.toml  temp.py  utils.py
routes/: __init__.py  db_routes.py  deploy_routes.py  logic_routes.py  main_routes.py  manage_routes.py  obda_routes.py  random_routes.py
templates/: blueprint_list.html  configure_sparql.html  create.html  create_db.html  create_new_db.html  create_new_db_manage.html  create_new_obda.html  create_new_obda_manage.html  deployments.html  home.html  logs.html  logs_deployment.html  logs_manage_deployments.html  logs_overview.html  manage_blueprints.html  manage_db_connections.html  query_form.html  select_train.html  train_status.html  use_existing_obda.html  view_obda_file.html  view_ontop_logs.html
