[tool.poetry]
name = "relay-frontend"
version = "0.1.0"
description = ""
authors = ["dfd0430 <michaeldippel10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
sparqlwrapper = "^2.0.0"
docker = "^7.1.0"
sqlalchemy = "^2.0.40"
pytz = "^2025.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
